--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
-  "name": "final-byte",
+  "name": "final-byte-backend",
   "version": "1.0.0",
-  "description": "",
-  "type":"module",
-  "main": "src/index.js",
+  "type": "module",
+  "main": "index.js",
   "scripts": {
-    "lint": "eslint src/**/*.js",
-    "start": "node ./src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle docs/openapi.yaml --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "express": "^5.1.0"
-  },
+  "description": "",
   "devDependencies": {
-    "@eslint/js": "^9.26.0",
-    "eslint": "^9.26.0",
-    "eslint-plugin-react": "^7.37.5",
-    "globals": "^16.1.0",
-    "nodemon": "^3.1.10"
+    "@eslint/js": "^9.23.0",
+    "@redocly/cli": "^1.34.2",
+    "eslint": "^9.23.0",
+    "globals": "^16.0.0",
+    "nodemon": "^3.1.9"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cloudinary": "^2.6.0",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "handlebars": "^4.7.8",
+    "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
+    "pino-http": "^10.4.0",
+    "pino-pretty": "^13.0.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
