--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "multer": "^1.4.5-lts.2",
     "pino-http": "^10.4.0",
     "pino-pretty": "^13.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yaml": "^2.8.0"
   }
 }
