--- a/swagger/components/responses/200.yaml
+++ b/swagger/components/responses/200.yaml
@@ -22,4 +22,4 @@ content:
                 data:
                   type: array
                   items:
-                    $ref: ../schemas/contact.yaml
+                    $ref: ../schemas/transactions.yaml
