--- a/swagger/components/responses/201.yaml
+++ b/swagger/components/responses/201.yaml
@@ -16,4 +16,4 @@ content:
               example: Successfully created a contact!
             data:
               type: object
-              $ref: '../../components/schemas/contact.yaml'
+              $ref: ../schemas/transactions.yaml
