--- a/swagger/paths/transactions/{id}/delete.yaml
+++ b/swagger/paths/transactions/{id}/delete.yaml
@@ -1,7 +1,8 @@
+# swagger/paths/contacts/{id}/get.yaml
 tags:
-  - Contacts
-summary: Get contact by id
-operationId: getContact
+  - Transactions
+summary: Get Transaction by id
+operationId: getTransaction
 description: 'Get contact by id'
 security:
   - bearerAuth: []
@@ -14,10 +15,6 @@ parameters:
       example: '65ca67e7ae7f10c88b598384'
 responses:
   '200':
-    $ref: ../../../components/responses/200.yaml
+    $ref: '../../../components/responses/200.yaml'
   '401':
     $ref: '../../../components/responses/401.yaml'
-  '404':
-    $ref: '../../../components/responses/404.yaml'
-  '500':
-    $ref: '../../../components/responses/500.yaml'
