--- a/swagger/paths/auth/logout.yaml
+++ b/swagger/paths/auth/logout.yaml
@@ -6,6 +6,8 @@ description: Logs out the user by clearing session and refresh tokens
 responses:
   '204':
     description: Successfully logged out, no content
+  '401':
+    $ref: '../../components/responses/401.yaml'
   '500':
     $ref: '../../components/responses/500.yaml'
 security:
