--- a/swagger/paths/transactions/post.yaml
+++ b/swagger/paths/transactions/post.yaml
@@ -1,13 +1,14 @@
 tags:
   - Transactions
-summary: Create transactions
-operationId: createTransactiob
+summary: Create transaction
+operationId: createTransaction
 description: 'Create a transaction with payload'
 security:
   - bearerAuth: []
 requestBody:
+  required: true
   content:
-    multipart/form-data:
+    application/json:
       schema:
         type: object
         required:
@@ -17,43 +18,42 @@ requestBody:
           - date
         properties:
           type:
-            description: "type of transaction"
+            description: "Type of transaction"
             type: string
             enum: ['income', 'expense']
           category:
-            description: "category of transaction"
+            description: "Category of transaction"
             type: string
-            enum: [
-              'Incomes',
-              'Main expenses',
-              'Products',
-              'Car',
-              'Self care',
-              'Child care',
-              'Household products',
-              'Education',
-              'Leisure',
-              'Other expenses',
-              'Entertainment',
-            ]
+            enum:
+              - Incomes
+              - Main expenses
+              - Products
+              - Car
+              - Self care
+              - Child care
+              - Household products
+              - Education
+              - Leisure
+              - Other expenses
+              - Entertainment
             example: "Car"
           amount:
-            description: "trunsaction amount"
+            description: "Transaction amount"
             type: number
             example: 2000
           date:
-            description: "operation date"
+            description: "Operation date"
             type: string
             format: date
             example: "2025-10-08"
           userId:
-            description: "Contact's user id"
+            description: "User ID (will be added automatically on backend)"
             type: string
-            example: 65e4decdd286b30065d54af9
+            example: "65e4decdd286b30065d54af9"
           comment:
-            description: "trunsaction acomment"
+            description: "Transaction comment"
             type: string
-            example: "for fix car"
+            example: "for fixing car"
 responses:
   '201':
     $ref: '../../components/responses/201.yaml'
