--- a/swagger/paths/transactions/by-date/get.yaml
+++ b/swagger/paths/transactions/by-date/get.yaml
@@ -12,7 +12,8 @@ parameters:
     required: true
     schema:
       type: string
-      example: '2025-28'
+      pattern: '^\d{4}-\d{2}$'
+      example: '2025-08'
 responses:
   '200':
     $ref: '../../../components/responses/200.yaml'
